src/objects/PowerLoader__Query_Parameter_Client_Behavior__c.object
<CustomObject>
    <fields>
        <fullName>PowerLoader__Action_Text__c</fullName>
        <label>Action Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display Message</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Flag Required</fullName>
                </value>
                <value>
                    <fullName>Remove Required Flag</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Set Value</fullName>
                </value>
                <value>
                    <fullName>JS Snippet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Apply_to_Tag__c</fullName>
        <label>Apply to Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Criteria_Value__c</fullName>
        <label>Criteria Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Criteria__c</fullName>
        <label>Criteria</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Equals</fullName>
                </value>
                <value>
                    <fullName>Contains</fullName>
                </value>
                <value>
                    <fullName>Begins With</fullName>
                </value>
                <value>
                    <fullName>Ends With</fullName>
                </value>
                <value>
                    <fullName>JS Snippet</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Negate_Criteria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Negate Criteria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Query_Parameter__c</fullName>
        <label>Query Parameter</label>
        <referenceTo>PowerLoader__Query_Parameter__c</referenceTo>
        <relationshipLabel>Query Parameter Client Behaviors</relationshipLabel>
        <relationshipName>Query_Parameter_Client_Behaviors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Set_Value_Type__c</fullName>
        <label>Set Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Empty</fullName>
                </value>
                <value>
                    <fullName>Revert to Default</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>JS Snippet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Query Parameter Client Behavior</label>
    <nameField>
        <displayFormat>QPCB-{00000}</displayFormat>
        <label>Query Parameter Client Behavior Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Parameter Client Behaviors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>PowerLoader__Action_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(PowerLoader__Action__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>PowerLoader__Action__c</errorDisplayField>
        <errorMessage>Action is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PowerLoader__Criteria_is_required</fullName>
        <active>true</active>
        <errorConditionFormula>ispickval(PowerLoader__Criteria__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>PowerLoader__Criteria__c</errorDisplayField>
        <errorMessage>Criteria is required</errorMessage>
    </validationRules>
</CustomObject>